# todoapp

./: .gitignore  README.md  pyproject.toml
todoapp/: app.py  app_form.py
todoapp/templates/: index.html
